--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
     <section id="projects" class="section">
         <h2>Projets</h2>
         <ul>
-            <li><strong>Jeu 2D Feu&Eau:</strong> Dans le cadre de ma première année de BUT Informatique, j'ai développé en équipe (Rémi MATHIEU, Romain STEFANI) un jeu se jouant à 2 joueurs en JAVA et JAVAFX.</li>
-            <li><strong>Application AndroidStudio:</strong> Dans le cadre de ma deuxième année de BUT Informatique, j'ai développé avec Romain STEFANI une application sur le thème de Pokémon.</li>
-            <li><strong>Jeu Unreal Engine 5 (en cours)</strong> Dans le cadre d'un projet personnel, nous nous sommes lancés avec Romain STEFANI dans la programmation d'un jeu 3D avec le moteur UnrealEngine5, et l'utilisation de C++.</li>
+            <li><strong>Jeu 2D Feu&Eau:</strong> Dans le cadre de ma première année de BUT Informatique, j'ai développé en équipe (<a href="https://remim06.github.io/portfolio.html" target="_blank">Rémi MATHIEU</a>, <a href="https://RomainUnice.github.io/portfolio" target="_blank">Romain STEFANI</a>) un jeu se jouant à 2 joueurs en JAVA et JAVAFX.</li>
+            <li><strong>Application AndroidStudio:</strong> Dans le cadre de ma deuxième année de BUT Informatique, j'ai développé avec <a href="https://RomainUnice.github.io/portfolio" target="_blank">Romain STEFANI</a> une application sur le thème de Pokémon.</li>
+            <li><strong>Jeu Unreal Engine 5 (en cours)</strong> Dans le cadre d'un projet personnel, nous nous sommes lancés avec <a href="https://RomainUnice.github.io/portfolio" target="_blank">Romain STEFANI</a> dans la programmation d'un jeu 3D avec le moteur UnrealEngine5, et l'utilisation de C++.</li>
         </ul>
         <p>Pour plus de projets, visitez mon <a href="https://github.com/Guillaume170604" target="_blank">GitHub</a>.</p>
     </section>
