--- a/index.html
+++ b/index.html
@@ -5,40 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Guillaume Faure</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            // Animation des sections au défilement
-            $(window).scroll(function() {
-                $('.section').each(function() {
-                    if ($(this).offset().top < $(window).scrollTop() + $(window).height() - 100) {
-                        $(this).addClass('visible');
-                    }
-                });
-
-                // Bouton retour en haut
-                if ($(window).scrollTop() > 100) {
-                    $('.back-to-top').fadeIn();
-                } else {
-                    $('.back-to-top').fadeOut();
-                }
-            });
-
-            // Smooth scroll pour les liens de navigation
-            $('nav ul li a').click(function(event) {
-                event.preventDefault();
-                $('html, body').animate({
-                    scrollTop: $($(this).attr('href')).offset().top
-                }, 800);
-            });
-
-            // Bouton retour en haut de page
-            $('.back-to-top').click(function() {
-                $('html, body').animate({scrollTop: 0}, 800);
-                return false;
-            });
-        });
-    </script>
 </head>
 <body>
     <header>
@@ -57,6 +23,7 @@
     <section id="about" class="section">
         <h2>À propos</h2>
         <p>Je suis actuellement en alternance en informatique orienté réalisation d’applications. Je suis quelqu’un en constante recherche de savoir.</p>
+        <a href="CV_FAURE_Guillaume.pdf" class="download-btn" download>Télécharger mon CV</a>
     </section>
     <section id="skills" class="section">
         <h2>Compétences</h2>
@@ -102,16 +69,17 @@
     <section id="projects" class="section">
         <h2>Projets</h2>
         <ul>
-            <li><strong>Jeu 2D Feu&Eau:</strong> Dans le cadre de ma première année de BUT Informatique, j'ai développé en équipe (<a href="https://remim06.github.io/portfolio.html" target="_blank">Rémi MATHIEU</a>, <a href="https://RomainUnice.github.io/portfolio" target="_blank">Romain STEFANI</a>) un jeu se jouant à 2 joueurs en JAVA et JAVAFX.</li>
-            <li><strong>Application AndroidStudio:</strong> Dans le cadre de ma deuxième année de BUT Informatique, j'ai développé avec <a href="https://RomainUnice.github.io/portfolio" target="_blank">Romain STEFANI</a> une application sur le thème de Pokémon.</li>
-            <li><strong>Jeu Unreal Engine 5 (en cours)</strong> Dans le cadre d'un projet personnel, nous nous sommes lancés avec <a href="https://RomainUnice.github.io/portfolio" target="_blank">Romain STEFANI</a> dans la programmation d'un jeu 3D avec le moteur UnrealEngine5, et l'utilisation de C++.</li>
+            <li><strong>Jeu 2D Feu&Eau:</strong> Dans le cadre de ma première année de BUT Informatique, j'ai développé en équipe (<a href="https://remim06.github.io/portfolio.html" target="_blank" class="link">Rémi MATHIEU</a>, <a href="https://RomainStefani04.github.io/portfolio" target="_blank" class="link">Romain STEFANI</a>) un jeu se jouant à 2 joueurs en JAVA et JAVAFX.</li>
+            <li><strong>Application AndroidStudio:</strong> Dans le cadre de ma deuxième année de BUT Informatique, j'ai développé avec <a href="https://RomainStefani04.github.io/portfolio" target="_blank" class="link">Romain STEFANI</a> une application sur le thème de Pokémon.</li>
+            <li><strong>Jeu Unreal Engine 5 (en cours)</strong> Dans le cadre d'un projet personnel, nous nous sommes lancés avec <a href="https://RomainStefani04.github.io/portfolio" target="_blank" class="link">Romain STEFANI</a> dans la programmation d'un jeu 3D avec le moteur UnrealEngine5, et l'utilisation de C++.</li>
         </ul>
-        <p>Pour plus de projets, visitez mon <a href="https://github.com/Guillaume170604" target="_blank">GitHub</a>.</p>
+        <p>Pour plus de projets, visitez mon <a href="https://github.com/Guillaume170604" target="_blank" class="link">GitHub</a>.</p>
     </section>
     <footer>
         <p>Contact: faureliffran.guillaume@gmail.com | 06 82 01 48 69</p>
         <p>Adresse: 60 chemin du val fleuri, Cagnes sur mer, 06800</p>
     </footer>
-    <div class="back-to-top">↑ Retour en haut</div>
+    <div class="back-to-top">↑</div>
+    <script src="script.js"></script>
 </body>
 </html>
